# DUNE-Vertex-Regression-GNN

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
agents/: dataset.md  general_rules.md  model.md  training.md  tuner.md
configuration/: __init__.py
core/: config.py  coordinate_correction.py  data.py  dataset.py  logger.py  model.py  parquet_store.py  runtime.py  trainer.py  tuner.py
main/: _bootstrap.py  augment_octants.py  benchmark.py  build_parquet_store.py  correct_coordinates.py  create_dataset.py  cross_validate.py  dataset_pipeline.py  explain.py  export_dataset_events.py  export_events.py  export_raw_light.py  infer.py  sweep.py  train.py  train_pipeline.py  tune.py  tunner_pipeline.ipynb
models/: __init__.py  blocks.py  edgeconv.py  gatv2.py  gcn.py  general_conv.py  gine.py  gps.py  gps_lite.py  graphsage.py  pna.py  res_gated.py  supergat.py  transformer_conv.py
notebooks/: coordinate_sensitivity_analysis.ipynb
tests/: conftest.py  test_augmentation.py  test_benchmark.py  test_configuration.py  test_cross_validation.py  test_dataset.py  test_explainability.py  test_inference.py  test_loss.py  test_models.py  test_normalization.py  test_parquet.py  test_tools.py  test_training.py  test_tuning.py
tools/: __init__.py
webui/: config_registry.py  event_explorer.py  gpu_watchdog.py  model_library.py  preprocessing_preview.py  process_manager.py  project_paths.py  request_router.py  results_browser.py  script_catalog.py  serve.py  server_logger.py  subprocess_runner.py  system_monitor.py  tensorboard_manager.py  web_ui_server.py
(+113 files in other folders)
